Version 0.8.6

Documentation improvements.

Version 0.8.5

Added the ability to choose whether or not to exponentiate marginal effects for `coxsimInteract` with the `expMarg` argument. 

Version 0.8.4

Minor bug fix for `simGG.siminteract`.

Version 0.8.3

License change and minor message changes.

Version 0.8.2

Added `legend` argument to allow the user to hide plot legends, when applicable.

Minor aesthetic updates and documentation clarifications.

Version 0.8.1

Minor changes for CRAN check.

Version 0.8

Added the argument `ribbons` to the simGG method. This produces a plot with shaded areas ('ribbons') for the minimum and maximum simulation values as well as the central 50% of this area. It also plots a line for the median value of this area. (Thanks to Jeff Chwieroth for the suggestion.)

Internal improvements to minimise the size of simulation output objects and improve performance if qi = "Hazard Rate".

A number of bug fixes.

Version 0.7.3

Documentation improvements.

Version 0.7.2 

Clean up for CRAN.

Version 0.7.1

Added an error message to `coxsimSpline` if white spaces are not entered before and after equal (=) signs in the `bspline` argument.

Version 0.7

- Added package vignette (partially completed).

- Expanded `coxsimPoly` so that it is capable of simulating other quantities of interest. Also, bug fixes.

- `spin = TRUE` works for quantities of interest when Xj - Xl = 0, i.e. in situations when all of the simulated quantities are 1 (or 0 for First Differences).

- Documentation improvements.

- Bug fixes, including: 
  - SPIn lower bound for different quantities of interest.
  - Fixed an error in the calculation of quantities of interest from Splines.

Version 0.6

- Increased flexibility for setting confidence levels. Now they may be set at any numeric value from 0 through 1.

- Choice of using confidence levels for the middle simulation values or the shortest probability interval. 
