@@ -6,7 +6,7 @@ Description: The package simulates and plots quantities of interest (relative
     multiplicative interactions, polynomials, penalised splines, and
     non-proportional hazards, as well as stratified survival curves from Cox
     Proportional Hazard models.
-Version: 0.8.6
+Version: 1.0
 Date: 2014-01-18
 Author: Christopher Gandrud
 Maintainer: Christopher Gandrud <christopher.gandrud@gmail.com>
