@@ -16,8 +16,11 @@ import(ggplot2)
 import(quadprog)
 importFrom(MSBVAR,rmultnorm)
 importFrom(car,scatter3d)
+importFrom(dplyr,group_by,mutate)
 importFrom(gridExtra,grid.arrange)
+importFrom(MASS,mvrnorm)
 importFrom(plyr,ddply,mutate,rename)
 importFrom(reshape2,melt)
 importFrom(stringr,str_match,str_replace,word)
 importFrom(survival,basehaz)
+importFrom(stats,smooth.spline)
