@@ -1,3 +1,11 @@
+Version 1
+
+Added `SmoothSpline` argument to `simGG.simspline` to use smoothing splines on the simulations. Creates a smoother graph.
+
+Added `type` argument to `simGG.spline`. Allows the user to plot using `points`, `ribbons`, or `lines`. NOTE: the `ribbons` argument is depricated.
+
+Uses `mvrnorm` from the `MASS` package instead of `rmultnorm` to draw the simulations. 
+
 Version 0.8.6
 
 Documentation improvements.
